--- a/haskell-google-translate.cabal
+++ b/haskell-google-translate.cabal
@@ -16,16 +16,21 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Token
   build-depends:       base >= 4.7 && < 5
+                     , bytestring
+                     , http-conduit
   default-language:    Haskell2010
+  default-extensions:  OverloadedStrings
 
-executable haskell-google-translate-exe
+executable translate
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , haskell-google-translate
   default-language:    Haskell2010
+  default-extensions:  OverloadedStrings
 
 test-suite haskell-google-translate-test
   type:                exitcode-stdio-1.0
