--- a/haskell-google-translate.cabal
+++ b/haskell-google-translate.cabal
@@ -20,6 +20,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , http-conduit
+                     , regex-posix
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
 
