--- a/haskell-google-translate.cabal
+++ b/haskell-google-translate.cabal
@@ -21,6 +21,7 @@ library
                      , bytestring
                      , http-conduit
                      , regex-posix
+                     , utf8-string
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
 
