--- a/haskell-google-translate.cabal
+++ b/haskell-google-translate.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
                      , Token
   build-depends:       base >= 4.7 && < 5
+                     , aeson
                      , bytestring
                      , http-conduit
                      , regex-posix
@@ -30,6 +31,7 @@ executable translate
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , unicode-show
                      , haskell-google-translate
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
