--- a/haskell-google-translate.cabal
+++ b/haskell-google-translate.cabal
@@ -22,6 +22,7 @@ library
                      , bytestring
                      , http-conduit
                      , regex-posix
+                     , unicode-show
                      , utf8-string
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
